--- a/package.json
+++ b/package.json
@@ -4,26 +4,33 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/html-webpack-plugin": "^2.30.4",
     "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "typescript": "^2.9.2"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
+    "@types/webpack": "^4.4.7",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.3",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
+    "ts-node": "^7.0.0",
     "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.2"
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack",
-    "start": "yarn run build && node server.js"
+    "server": "./node_modules/.bin/nodemon ./public/server.js",
+    "start": "yarn run build && yarn run server"
   }
 }
