--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/html-webpack-plugin": "^2.30.4",
     "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -15,9 +14,11 @@
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
     "@types/webpack": "^4.4.7",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.2",
     "nodemon": "^1.18.3",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
