--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.9.3",
     "nodemon": "^1.18.3",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.3",
